# icrc7

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  icrc7.did.test.cjs  package.json  predeploy.sh
scripts/: build.sh  test.sh
src/factory/: Cargo.toml  factory.did
src/factory/src/: lib.rs
src/icrc7/: Cargo.toml  icrc7.did
src/icrc7/src/: candid_file_generator.rs  errors.rs  init_call.rs  init_method.rs  lib.rs  memory.rs  query_calls.rs  query_method.rs  state.rs  types.rs  update_calls.rs
src/icrc7_backend/: Cargo.toml
tests/: actor.cjs  icrc7.did.test.cjs  icrc7.test.cjs  test.sh
