[package]
name = "icrc7"
version = "0.1.0"
edition = "2021"
authors = ["Pramit Gaha <pramitgaha21@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.4"
ic-cdk = "0.9.2"
ic-cdk-macros = "0.6.0"
ic-stable-structures = "0.5.6"
serde = "1"
