[package]
name = "icrc7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.11"
ciborium = "0.2.1"
ic-cdk = "0.11.3"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0.166"
serde_bytes = "0.11.12"
b3_utils = { version = "0.8.0", features = ["stable_memory", "ledger"] }
